--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   
                 </div>
             </div>
-            <button id="reset-button" class="action-btn reset">Resetar</button>
+            <!-- <button id="reset-button" class="action-btn reset">Resetar</button> -->
         </div>
 
     </div>
