--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
                 </div>
             </div>
            
-              <button id="reset-button" class="action-btn reset">Resetar</button>
+              <!-- <button id="reset-button" class="action-btn reset">Resetar</button>
         </div>
-           <button id="run-button" class="action-btn run" title="Executar"></button>
+           <button id="run-button" class="action-btn run" title="Executar"></button> -->
+           <div class="action-buttons-group">
+        <button id="run-button" class="action-btn run" title="Executar"></button>
+        <button id="reset-button" class="action-btn reset">Resetar</button>
+    </div>
         </div>
         
 
