--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
            <button id="run-button" class="action-btn run" title="Executar"></button> -->
            <div class="action-buttons-group">
-        <button id="run-button" class="action-btn run" title="Executar"></button>
+        <button id="run-button" class="action-btn run" title="Executar">Executar</button>
         <button id="reset-button" class="action-btn reset">Resetar</button>
     </div>
         </div>
