alteração cor legenda

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <div class="control-panel">
                  <div class="legend-row">
                         <span class="legend forward">Vermelho: Frente</span>
-                        <span class="legend left">Amarelo: Direita</span>
-                        <span class="legend right">Azul: Esquerda</span>
+                        <span class="legend left">Azul: Esquerda</span>
+                        <span class="legend right">Amarelo: Direita</span>
                         <span class="legend function">Verde: Função</span>
                     </div>
                 <div class="command-buttons-group">
